--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,67 +1,39 @@
 ﻿@using SnackbarB2C2PI4_LeviFunk_ClassLibrary
-@model IEnumerable<Product>
+@model ProductsVMIndex
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1 class="CenteredTitle">Menu</h1>
+<hr />
 
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
+<div class="GridCards">
 
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
+    @foreach (Product product in Model.Products)
+    {
+        <div class="card border-primary mb-3" id="GridCardItems">
 
-            <th>
-                @Html.DisplayNameFor(model => model.Discount)
-            </th>
+            <div class="card-header">
+                @product.Name
+            </div>
 
-            <th>
-                @Html.DisplayNameFor(model => model.Stock)
-            </th>
+            <div class="card-body">
+                <div class="CardTitleHeight">
+                    <h5 class="card-title CenteredTitle">
+                        Price: €@product.Price
+                    </h5>
+                </div>
 
-            <th></th>
+                <div class="CardImgHeight">
+                    <img src="~/images/@product.ImgPath" class="cardImg" />
+                </div>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
+                <a asp-action="Details" asp-route-id="@product.Id" type="button" class="btn btn-primary ProductDetailsButtonSize">Details</a>
 
-                <td>
-                    <img src="~/images/@item.ImgPath" class="tableImg"/>
-                </td>
+            </div>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
+        </div>
+    }
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Discount)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Stock)
-                </td>
-
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                </td>
-
-            </tr>
-        }
-    </tbody>
-</table>
+</div>
