--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -1,46 +1,77 @@
-﻿@model SnackbarB2C2PI4_LeviFunk_ClassLibrary.Order
+﻿@using SnackbarB2C2PI4_LeviFunk_ClassLibrary
+@model OrdersVMDetails
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="TitleWrapper">
 
-<div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
+    <h1 class="TitleGridItem">Details of the selected order</h1>
 
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfOrder)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfOrder)
-        </dd>
+    <p class="TitleGridItem" id="detailsButtonWrapper">
+        <a asp-controller="Orders" asp-action="Index" class="btn btn-primary btn-sm" id="detailsButtonElement">Return to orders</a>
+        <a asp-controller="Orders" asp-action="EditStart" asp-route-id="@Model.Order.Id" class="btn btn-primary btn-sm" id="detailsButtonElement">Edit the order</a>
+        <a asp-controller="Orders" asp-action="Delete" asp-route-id="@Model.Order.Id" class="btn btn-primary btn-sm" id="detailsButtonElement">Delete the order</a>
+    </p>
 
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsFavorited)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsFavorited)
-        </dd>
-
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-    </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="CompleteTransactionWrapper">
+
+    <div class="CompleteTransactionElement">
+        <!--A list of data-->
+        <div>
+
+            <div class="form-group">
+                <label class="form-label mt-4">Total price</label>
+                <input class="form-control" id="readOnlyInput" type="text" placeholder="€@Model.Order.Cost" readonly="" />
+            </div>
+
+            @if(Model.Order.Customer != null)
+            {
+                <div class="form-group">
+                    <label class="form-label mt-4">Customer</label>
+                    <input class="form-control" id="readOnlyInput" type="text" placeholder="@Model.Order.Customer.FirstName @Model.Order.Customer.LastName" readonly="" />
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label mt-4">Email</label>
+                    <input class="form-control" id="readOnlyInput" type="text" placeholder="@Model.Order.Customer.Email" readonly="" />
+                </div>
+            }
+
+        </div>
+
+    </div>
+
+    <div class="CompleteTransactionElement">
+        <!--A list of all products-->
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Price per item</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Product product in Model.Products)
+                {
+                    <tr>
+
+                        <td>
+                            @product.Name
+                        </td>
+
+                        <td>
+                            @product.Price
+                        </td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+
 </div>
