--- a/Views/Orders/Edit.cshtml
+++ b/Views/Orders/Edit.cshtml
@@ -1,47 +1,107 @@
-﻿@model SnackbarB2C2PI4_LeviFunk_ClassLibrary.Order
+﻿@using SnackbarB2C2PI4_LeviFunk_ClassLibrary
+@model OrdersVMCreate
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="AddProductToOrderWrapper">
 
-<h4>Order</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
-                <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfOrder" class="control-label"></label>
-                <input asp-for="DateOfOrder" class="form-control" />
-                <span asp-validation-for="DateOfOrder" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IsFavorited" class="control-label"></label>
-                <input asp-for="IsFavorited" class="form-control" />
-                <span asp-validation-for="IsFavorited" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="AddProductToOrderElement">
+        <div class="GridCardsOrderCreate">
+            @foreach (Product product in Model.AllProducts)
+            {
+                <div class="card border-primary mb-3" id="GridCardItemsOrderCreate">
+
+                    <div class="card-header">
+                        @product.Name
+                    </div>
+
+                    <div class="card-body" id="CardsMaxWidthOrderCreate">
+
+                        <div class="CardTitleHeight">
+                            <h5 class="card-title CenteredTitle">
+                                Price: €@product.Price
+                            </h5>
+                        </div>
+
+                        <div class="CardImgHeight">
+                            <img src="~/images/@product.ImgPath" class="CardImgSizes" />
+                        </div>
+
+                        <div class="AddProductButtonsWrapper">
+                            <div class="AddProductButtonsElement">
+                                <a asp-controller="Orders" asp-action="AddProductToOrderProductsListEdit" asp-route-id="@product.Id" asp-route-orderId="@Model.Order.Id" class="btn btn-success AddProductButtonsElementSize">+</a>
+                            </div>
+                            <div class="AddProductButtonsElement">
+                                <a asp-controller="Orders" asp-action="RemoveProductFromOrderProductsListEdit" asp-route-id="@product.Id" asp-route-orderId="@Model.Order.Id" class="btn btn-danger AddProductButtonsElementSize">-</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            }
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div class="AddProductToOrderElement">
+        <div class="TableInGridHeight">
+            <div class="AddProductButtonsWrapper">
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="AddProductButtonsElement">
+                        <a asp-controller="Orders" asp-action="SaveEditedOrder" asp-route-id="@Model.Order.Id" class="btn btn-primary btn-sm">Save & Continue</a>
+                    </div>
+                }
+                else
+                {
+                    <div class="AddProductButtonsElement">
+                        <a asp-controller="Orders" asp-action="SaveEditedOrder" asp-route-id="@Model.Order.Id" class="btn btn-primary btn-sm">Continue</a>
+                    </div>
+                }
+
+                <div class="AddProductButtonsElement">
+                    <a asp-controller="Orders" asp-action="CancelEditedOrder" asp-route-id="@Model.Order.Id" class="btn btn-primary btn-sm">Cancel</a>
+                </div>
+
+            </div>
+
+            <table class="table">
+
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Price per item</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (Product product in Model.Products)
+                    {
+                        <tr>
+
+                            <td>
+                                @Html.DisplayName(product.Name)
+                            </td>
+
+                            <td>
+                                €@Html.DisplayName(product.Price.ToString())
+                            </td>
+
+                        </tr>
+                    }
+                </tbody>
+
+            </table>
+        </div>
+
+
+
+    </div>
+
 </div>
 
 @section Scripts {
