--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -187,7 +187,7 @@ body {
 
 .favOrdersWrapper {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 25% 25% 25%;
     margin-top: 3em;
 }
 
@@ -294,4 +294,15 @@ body {
 
 .formButtons {
     margin-top: 3em;
+}
+
+#detailsButtonWrapper {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+#detailsButtonElement {
+    display: inline-grid;
+    margin-left: 0;
+    margin-right: 5px;
 }
